# hackthebot

./: .env.example  .gitignore  HackTheBot.py  LangGraphServer.sh  README.md  TODO.md  pyproject.toml  testdata.json  tester.py
Notes/: MermaidDiagram.txt
StudioConfigs/: langgraph-studio-reconagent.json  langgraph-studio.json
agents/: EnumAgent.py  ExploitAgent.py  NmapAgent.py  ReconAgent.py  RoboToolAgent.py  StingerAgent.py
robopages/: robopages-cli.sh  robopages-server.sh
robopages/pages/: README.md
robopages/pages/coding/python/: exec.yml
robopages/pages/cybersecurity/offensive/information-gathering/: ffufai.yml  gobuster.yml  httpx.yml  katana.yml  nmap.yml
robopages/pages/cybersecurity/offensive/web-exploitation/: nuclei.yml  sqlmap.yml  wpscan.yml
robopages/pages/cybersecurity/offensive/web-shells/: php.yml
robopages/pages/utilities/: filesystem.yml  web.yml
specialagents/BrowserAgent/: Browser.py  ReadMe.md  __init__.py  agents.py
tools/: Nmap.py
utils/: Configuration.py  ContextHelpers.py  HostUpdate.py  LLMHelpers.py  LangChain_RoboPages.py  Logging.py  OpenRouter.py  OutputFormatters.py  Prompts.py  SpecialAgents.py  States.py  Tasking.py  Tooling.py  langchain-robopages.py
